--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,14 @@
 		</dependency>
 
 		<!-- Lombok -->
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.36</version>
 			<scope>provided</scope>
 		</dependency>
+
 
 		<!-- Spring Boot Test -->
 		<dependency>
