[Akshit] Add . Code of DTO class using Lombok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll
-
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Logging Configuration
+logging.file.name=application.log
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.com.example.employeepayroll=DEBUG
+logging.level.org.hibernate=ERROR
+
+# Console Log Pattern
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] %logger{5}:%line %msg%n
