[Akshit] Add . Code of logging levels using application properties at run time

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.3</version>
+		</dependency>
 		<!-- Spring Boot Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
