--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+
 # Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -17,3 +19,5 @@ logging.level.org.hibernate=ERROR
 
 # Console Log Pattern
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] %logger{5}:%line %msg%n
+
+spring.profiles.active=prod
