--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,7 @@ logging.level.com.example.employeepayroll=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS}[%level][%thread]%logger{5}:%line %msg%n
 
 logging.file.name=logs/dev-appplication.log
+
+spring.datasource.url=jdbc:mysql://localhost:3306/payroll
+spring.datasource.username=payroll_user
+spring.datasource.password=your_secure_password
