--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,18 @@
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/payroll
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.profiles.active=dev
+
+# Database Configuration (Using Environment Variables)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
-# Hibernate Configuration
+# Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Logging Configuration
 logging.file.name=application.log
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
-logging.level.com.example.employeepayroll=DEBUG
 logging.level.org.hibernate=ERROR
-
-# Console Log Pattern
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] %logger{5}:%line %msg%n
-
-spring.profiles.active=prod
+logging.level.com.example.employeepayroll=DEBUG
