[Akshit] Add . Code for Custom Exception for Employee Not Found

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # Database Configuration (Using Environment Variables)
 spring.datasource.url=${SPRING_DATASOURCE_URL}
